# auth-test

./: Cargo.toml  README.md  config.sample.toml
src/: config.rs  main.rs
templates/: confirm.html
