[package]
name = "verder-helpen-auth-test"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
base64 = "0.13.1"
verder-helpen-jwt = { git = "https://github.com/verder-helpen/verder-helpen-jwt.git" }
verder-helpen-proto = { git = "https://github.com/verder-helpen/verder-helpen-proto.git" }
josekit = "0.8.4"
reqwest = { version = "0.11.22", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
